--- a/BappDescription.html
+++ b/BappDescription.html
@@ -6,7 +6,7 @@
     <li>Add a Session Handling rule</li>
     <li>Name it and select <i>Add</i>, <i>Invoke a Burp Extension</i> extension</li>
     <li>Make sure the scope is correct! If you're just trying this out, select 'include all URLs' in the scope (not recommended for regular use).</li>
-    <li>Select the <i>Add Bearer Token</i> option from the list in the following screen</li>
+    <li>Select the <i>Add Custom Header</i> option from the list in the following screen</li>
 </ol>
 
 <p>You can also use a dynamic value. In this case:</p>
