--- a/BappDescription.html
+++ b/BappDescription.html
@@ -1,3 +1,5 @@
+<p>Add or update custom HTTP headers from session handling rules. This is especially useful for JSON Web Tokens (JWT).</p>
+
 <p>Basic usage, with a hard-coded value:</p>
 
 <ol>
@@ -5,7 +7,7 @@
     <li>Select Project Options -&gt; Sessions</li>
     <li>Add a Session Handling rule</li>
     <li>Name it and select <i>Add</i>, <i>Invoke a Burp Extension</i> extension</li>
-    <li>Make sure the scope is correct! If you're just trying this out, select 'include all URLs' in the scope (not recommended for regular use).</li>
+    <li>Make sure the scope is correct. If you're just trying this out, you can use <i>Include all URLs</i>, but set a proper scope for regular use.</li>
     <li>Select the <i>Add Custom Header</i> option from the list in the following screen</li>
 </ol>
 
