--- a/BappDescription.html
+++ b/BappDescription.html
@@ -17,5 +17,5 @@
     <li>Record a macro that fetches the dynamic value</li>
     <li>In the session handling rule, create an action to <i>Run a macro</i> and select the macro</li>
     <li>Enable <i>After running the macro, invoke a Burp extension action handler</i> and select <i>Add Bearer Token</i></li>
-    <li>In <i>Add Customer Header</i> enter a regular expressoin that extracts the value from the macro response</li>
+    <li>In <i>Add Customer Header</i> enter a regular expression that extracts the value from the macro response</li>
 </ol>
